prodMetadata/src/objects/Give__c.object
<CustomObject>
    <fields>
        <fullName>Notification_Take_Defaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this value is selected, the notification settings (National or State) will be charged from the Give Location and not from the Notification section.</description>
        <inlineHelpText>If this value is selected, the notification settings (National or State) will be charged from the Give Location and not from the Notification section.</inlineHelpText>
        <label>Notification Take Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Attended__c</fullName>
        <label>Num. Attended</label>
        <summarizedField>Give_Instance__c.Num_Attended__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Remaining__c</fullName>
        <label>Num. Remaining</label>
        <summarizedField>Give_Instance__c.Number_Remaining__c</summarizedField>
        <summaryFilterItems>
            <field>Give_Instance__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Confirmed_Units__c</fullName>
        <label>Num. Confirmed Units</label>
        <summarizedField>Give_Instance__c.Number_of_Confirmed_Units__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Give_Instances__c</fullName>
        <label>Num. Give Instances</label>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Tentative_Confirmed_Units__c</fullName>
        <label>Num. Tentative Confirmed Units</label>
        <summarizedField>Give_Instance__c.Number_of_Tentative_Confirmed_Units__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Num. Units</label>
        <summarizedField>Give_Instance__c.Number_of_Units__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Waitlist_Units__c</fullName>
        <label>Num. Waitlist Units</label>
        <summarizedField>Give_Instance__c.Number_of_Waitlist_Units__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partnership_Request__c</fullName>
        <label>Partnership</label>
        <referenceTo>Partnership_Request__c</referenceTo>
        <relationshipLabel>Gives</relationshipLabel>
        <relationshipName>Gives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percent_Requested__c</fullName>
        <formula>((Number_of_Units__c - Number_Remaining__c) / Number_of_Units__c) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requires_Special_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, gives member instructions and field to fill in special response.</description>
        <inlineHelpText>If checked, gives member instructions and field to fill in special response.</inlineHelpText>
        <label>Collect Special Response #1 (at request)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be used to indicate that the user wishes to send Notifications for this Give.</description>
        <inlineHelpText>This checkbox will be used to indicate that the user wishes to send Notifications for this Give.</inlineHelpText>
        <label>Send Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a Terms and Conditions checkbox will be shown above the submit button, and it will be required.</description>
        <inlineHelpText>If checked, a Terms and Conditions checkbox will be shown above the submit button, and it will be required.</inlineHelpText>
        <label>Show Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_2__c</fullName>
        <label>Special Instructions #2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_3__c</fullName>
        <label>Special Instructions #3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_4__c</fullName>
        <label>Special Instructions #4</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>E.g. &quot;Tell us why you should be chosen to be on the Wheaties box.&quot;</description>
        <inlineHelpText>E.g. &quot;Tell us why you should be chosen to be on the Wheaties box.&quot;</inlineHelpText>
        <label>Special Instructions #1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Formula__c</fullName>
        <description>Tries to pull State from the City, ST field. Fields are not separated because State functionality is based on multi-select picklist Location by State.</description>
        <formula>right(City__c,len(City__c)-find(&quot;,&quot;,City__c))</formula>
        <inlineHelpText>Tries to pull State from the City, ST field (takes everything after the first comma).</inlineHelpText>
        <label>State Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This field will be used to indicate the states in which a Contact resides that this notification will be sent to.</description>
        <inlineHelpText>This field will be used to indicate the states in which a Contact resides that this notification will be sent to.</inlineHelpText>
        <label>State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
                <value>
                    <fullName>Closed Visible</fullName>
                </value>
                <value>
                    <fullName>Closed Invisible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MLB</fullName>
                </value>
                <value>
                    <fullName>NBA</fullName>
                </value>
                <value>
                    <fullName>NFL</fullName>
                </value>
                <value>
                    <fullName>NHL</fullName>
                </value>
                <value>
                    <fullName>NASCAR</fullName>
                </value>
                <value>
                    <fullName>PGA</fullName>
                </value>
                <value>
                    <fullName>Other Sports</fullName>
                </value>
                <value>
                    <fullName>Movie</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Excursions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <description>The text that is displayed and required if &quot;Show Terms and Conditions&quot; is checked.</description>
        <inlineHelpText>The text that is displayed and required if &quot;Show Terms and Conditions&quot; is checked. There is no additional text added, so phrase it like &quot;I agree that...&quot;</inlineHelpText>
        <label>Terms and Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Come First Served</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Screened Give</fullName>
                </value>
                <value>
                    <fullName>Unlimited Give</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_of_Give__c</fullName>
        <description>Total value of whole give</description>
        <inlineHelpText>Total value of whole give</inlineHelpText>
        <label>Value of Give</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_Unit__c</fullName>
        <description>Value of each ticket or unit</description>
        <inlineHelpText>Value of each ticket or unit</inlineHelpText>
        <label>Value of Unit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waitlist__c</fullName>
        <description>Dependent on “First Come First Served” type. This determines whether event should allow waitlist signups.</description>
        <inlineHelpText>Dependent on “First Come First Served” type. This determines whether event should allow waitlist signups.</inlineHelpText>
        <label>Waitlist?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
                <value>
                    <fullName>No Waitlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>This field will be used to indicate the states in which a Contact resides that this notification will be sent to.</description>
        <inlineHelpText>This field will be used to indicate the states in which a Contact resides that this notification will be sent to.</inlineHelpText>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_s__c</fullName>
        <inlineHelpText>Multiple Zip Codes should be Separate Gives</inlineHelpText>
        <label>Location by Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Give</label>
    <listViews>
        <fullName>All_with_Geo_Locations</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Geo_Location__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>Location_by_State_s__c</columns>
        <columns>National_Give__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Listing_Start_Date__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geo_Location__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Zip - Will come up in Zip search</label>
    </listViews>
    <listViews>
        <fullName>All_with_Locations</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>Location_by_State_s__c</columns>
        <columns>National_Give__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Listing_Start_Date__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Locations</label>
    </listViews>
    <listViews>
        <fullName>All_with_Tallies</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>Deadline__c</columns>
        <columns>NAME</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>City__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Listing_Start_Date__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Give_Date_Display__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Maximum_Units_per_Member__c</columns>
        <columns>Number_of_Units__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Tallies</label>
    </listViews>
    <listViews>
        <fullName>Created_LAST_WEEK</fullName>
        <columns>NAME</columns>
        <columns>Earliest_Start_Date__c</columns>
        <columns>Available_To__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Created LAST WEEK</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Earliest_Start_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Featured_Gives</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Highlight_Listing__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>Location_by_State_s__c</columns>
        <columns>National_Give__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Partnership_Request__c</columns>
        <columns>Must_be_21__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Highlight_Listing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Featured Gives</label>
    </listViews>
    <listViews>
        <fullName>Location_National_Gives</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Highlight_Listing__c</columns>
        <columns>City__c</columns>
        <columns>National_Give__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_of_Units__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>National_Give__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Location - National Gives</label>
    </listViews>
    <listViews>
        <fullName>Location_State_based_Gives</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Highlight_Listing__c</columns>
        <columns>Location_by_State_s__c</columns>
        <columns>City__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_of_Units__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_by_State_s__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Location - State-based Gives</label>
    </listViews>
    <listViews>
        <fullName>Location_Zip_based_Gives</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Highlight_Listing__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>City__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_of_Units__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zip_Code_s__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Location - Zip-based Gives</label>
    </listViews>
    <listViews>
        <fullName>Multiple_Date_Gives_All</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Number_of_Give_Instances__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Listing_Start_Date__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Maximum_Units_per_Member__c</columns>
        <columns>Number_of_Units__c</columns>
        <columns>Number_of_Confirmed_Units__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Give_Instances__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <label>Multiple Date Gives - All</label>
    </listViews>
    <listViews>
        <fullName>Multiple_Date_Gives_Open</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Number_of_Give_Instances__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Listing_Start_Date__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Maximum_Units_per_Member__c</columns>
        <columns>Number_of_Units__c</columns>
        <columns>Number_of_Confirmed_Units__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Give_Instances__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Planned,Waitlist</value>
        </filters>
        <label>Multiple Date Gives - Open Planned Waitl</label>
    </listViews>
    <listViews>
        <fullName>Open_without_Geo_Locations</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Geo_Location__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>Location_by_State_s__c</columns>
        <columns>National_Give__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Listing_Start_Date__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geo_Location__c</field>
            <operation>equals</operation>
        </filters>
        <label>Zip - Will not come up in Zip search</label>
    </listViews>
    <listViews>
        <fullName>Partner_Miller_Gives</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>Location_by_State_s__c</columns>
        <columns>National_Give__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Listing_Start_Date__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partnership_Request__c</field>
            <operation>equals</operation>
            <value>MHL 2010 Partnership</value>
        </filters>
        <label>Partner - Miller Gives</label>
    </listViews>
    <listViews>
        <fullName>Partner_Non_Miller_Gives</fullName>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>Location_by_State_s__c</columns>
        <columns>National_Give__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Number_Remaining__c</columns>
        <columns>Listing_Start_Date__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partnership_Request__c</field>
            <operation>notEqual</operation>
            <value>MHL 2010 Partnership</value>
        </filters>
        <label>Partner - Non-Miller Gives</label>
    </listViews>
    <listViews>
        <fullName>Status_Closed_Invisible_Gives</fullName>
        <columns>Status__c</columns>
        <columns>Earliest_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Number_of_Give_Instances__c</columns>
        <columns>Zip_Code_s__c</columns>
        <columns>Type__c</columns>
        <columns>Latest_End_Date__c</columns>
        <columns>Latest_Application_Deadline__c</columns>
        <columns>Maximum_Units_per_Member__c</columns>
        <columns>Number_of_Units__c</columns>
        <columns>Number_of_Confirmed_Units__c</columns>
        <columns>Partnership_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed Invisible</value>
        </filters>
        <label>Status - Closed Invisible Gives</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_for_special_instructions</fullName>
        <active>true</active>
        <description>If the collect special responses boxes are checked, make sure that the corresponding special instructions have been entered.</description>
        <errorConditionFormula>if(
   or( 
     and(Requires_Special_Response__c , isblank( Special_Instructions__c )),
     and(isblank( Special_Instructions_2__c),
               or(ispickval(Collect_Special_Response_2__c, &quot;at request&quot;),
               ispickval(Collect_Special_Response_2__c, &quot;at re-confirm&quot;)
                   )
             ),
     and(isblank( Special_Instructions_3__c),
               or(ispickval(Collect_Special_Response_3__c, &quot;at request&quot;),
               ispickval(Collect_Special_Response_3__c, &quot;at re-confirm&quot;)
                   )
             ),
     and(isblank( Special_Instructions_4__c),
               or(ispickval(Collect_Special_Response_4__c, &quot;at request&quot;),
               ispickval(Collect_Special_Response_4__c, &quot;at re-confirm&quot;)
                   )
             ),
     and(isblank( Special_Instructions_5__c),
               or(ispickval(Collect_Special_Response_5__c, &quot;at request&quot;),
               ispickval(Collect_Special_Response_5__c, &quot;at re-confirm&quot;)
                   )
             )
   ),
true,false)</errorConditionFormula>
        <errorDisplayField>Requires_Special_Response__c</errorDisplayField>
        <errorMessage>If you collect a Special Response field, you must enter Special Instructions for that field. (FYI this validation rule can be turned off).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Location_Must_Be_Filled</fullName>
        <active>true</active>
        <description>This rule ensures at least one of the following 3 location fields is used: National Give Checkbox, Zip Field or State Picklist.</description>
        <errorConditionFormula>AND(ISBLANK( Location_by_State_s__c ), ISBLANK( Zip_Code_s__c ),NOT( National_Give__c ))</errorConditionFormula>
        <errorDisplayField>Zip_Code_s__c</errorDisplayField>
        <errorMessage>At least ONE of these location fields must be used:  Zip -OR- State -OR- National</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Location_Validation</fullName>
        <active>true</active>
        <description>This rule ensures only one of the following 3 location fields is used: National Give Checkbox, Zip Field or State Picklist.</description>
        <errorConditionFormula>IF(OR(AND(ISBLANK( Location_by_State_s__c ),NOT( National_Give__c )),AND(ISBLANK( Location_by_State_s__c ),ISBLANK( Zip_Code_s__c )),AND(ISBLANK( Zip_Code_s__c ),NOT( National_Give__c ))),FALSE,TRUE)</errorConditionFormula>
        <errorDisplayField>Zip_Code_s__c</errorDisplayField>
        <errorMessage>Only ONE of these location fields can be used:  Zip -OR- State -OR- National</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_open_info_give_if_no_winner_instructs</fullName>
        <active>true</active>
        <description>Prevents an Informational Give from being opened without fulfillment instructions for winner. Since the Fulfillment Instructions for Winner field is a rich text field, we had to use the LEN function for this formula.</description>
        <errorConditionFormula>and(

ispickval( Type__c, &quot;Information&quot; ), 
LEN(Fulfillment_Instructions_rtf__c)=0,

or (ispickval(Status__c, &quot;Open&quot;), ispickval(Status__c, &quot;Planned&quot;) )

)</errorConditionFormula>
        <errorDisplayField>Fulfillment_Instructions_rtf__c</errorDisplayField>
        <errorMessage>For an Information Give the Fulfillment Instructions for Winner must be filled in. That&apos;s because the instructions will be sent as soon as the member requests the reward.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notification_Location_Must_Be_Filled</fullName>
        <active>false</active>
        <description>This rule ensures at least one of the following 2 location fields is used in the Notification section: National Checkbox,  or State Picklist.</description>
        <errorConditionFormula>NOT( AND (Send_Notifications__c ,	NOT( OR( AND( National__c , NOT( ISBLANK(  State__c ) ) ) , 
AND( NOT( National__c ) , ISBLANK( State__c ) ) ) ) ) )</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>At least ONE of these location fields must be used:  State -OR- National</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notification_Message_Must_Be_Filled</fullName>
        <active>false</active>
        <description>This rule ensures that the Message Text  is used in the Notification section.</description>
        <errorConditionFormula>NOT( AND( Send_Notifications__c, NOT( ISBLANK(  Message_Text__c  ) ) ) )</errorConditionFormula>
        <errorDisplayField>Message_Text__c</errorDisplayField>
        <errorMessage>The Message Text  is required if the Send Notification is enabled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_Give_needs_Listing_Start_Date</fullName>
        <active>true</active>
        <description>A Give with Status=Planned needs a Listing Start Date to determine when listing goes live.</description>
        <errorConditionFormula>and(ispickval(Status__c,&quot;Planned&quot;), isblank(Listing_Start_Date__c))</errorConditionFormula>
        <errorDisplayField>Listing_Start_Date__c</errorDisplayField>
        <errorMessage>A &quot;Planned&quot; give needs a Listing Start Date to determine when listing goes live.</errorMessage>
    </validationRules>
</CustomObject>